BirdsnestCSS.css
@charset "UTF-8";

#wrapper {
	margin-left: auto;
	margin-right: auto;
}

body {
	background-color: grey;
}

.franchising {
	background-color: white;
	border-radius: 5%;
	width: 650px;
	height: auto;
	margin-left: auto;
	margin-right: auto;
	border: 3px solid #000000;
	margin-bottom: 2px;
}

#Title {
	color: black;
	display: flex;
	justify-content: center;
	padding-top: 18px;
	font-size: 108px;
}

#Title b {
	color: inherit;
	display: inherit;
	justify-content: center;
	font-size: 78px;
}

#Slogan {
	margin-top: 0px;
	text-align: center;
	color: black;	
}

.location {
	text-align: center;
	border: 2px solid;
	float: right;
	padding-right: 10px;
	padding-bottom: 40px;
	padding-left: 12px;
	border-radius: 25px;
	max-width: fit-content;
	max-height: fit-content;
	min-width: 15%;
	min-height: fit-content;
	margin-top: 30px;
	font-size: 22px;
	font-weight: bold;
}

#HoursOfOp {
    border: 2px solid;
	float: left;
	text-align: center;
	border-radius: 25px;
	padding: 10px;
	padding-bottom: 30px;
	padding-left: 15px;
	max-width: fit-content;
	max-height: fit-content;
	min-width: 15%;
	min-height: fit-content;
	margin-top: 30px;
	font-size: 24px;
}

#Location {
	text-align: center;
	text-decoration-line: underline;
	font-size: 26px;
}

#HoO {
	font-size: 26px;
	text-decoration-line: underline;
	min-width: 15%;
	text-align: center;
}

.tab {
	background-color: grey;
	text-align: center;
	margin-left: auto;
	margin-right: auto;
	margin-top: 10px;
	border-bottom: 2px solid;
	border-top: 2px solid;
	width: 1200px;
	display: center;
}

.tab button {
	background-color: inherit;
	border: none;
	outline: none;
	cursor: pointer;
	/*padding: 20px 70px;*/
	transition: .3s;
	font-weight: bold;
	margin-left: auto;
	margin-right: auto;
	font-size: 22px;
	width: 397.33px;
	height: 105px;
}

.tab button:hover {
	background-color: rgb(80, 80, 80);
	padding: 20px 80px;
	font-size: 22px;
	margin-left: auto;
	margin-right: auto;
}

h1 {
	text-align: center;
}

#Logo:link {
	color: black;
	text-orientation: none;
	text-decoration-line: none;
}

#Logo:visited {
	color:rgb(137, 14, 159)
}

#Aboutbutton {
	position: relative;
}


#Aboutbutton:before {
	content: "";
	display: flex;
	position: absolute;
	left: 0;
	top: 0;
	opacity: .3;
	background-image: url('images/aboutpic.jpg');
	background-size: cover;
	width: 398px;
	height: 105px;
}

#Foodbutton {
	position: relative;
}

#Foodbutton::before {
	content: "";
	display: flex;
	position: absolute;
	left: 0;
	top: 0;
	opacity: .3;
	background-image: url('images/foodpic.jpg');
	background-size: cover;
	width: 398px;
	height: 105px;
}

#Barbutton {
	position: relative;
}

#Barbutton::before {
	content: "";
	display: flex;
	position: absolute;
	left: 0;
	top: 0;
	opacity: .3;
	background-image: url('images/drinkpic.jpg');
	background-size: cover;
	width: 398px;
	height: 105px;
}

